# rs-crypto

./: .gitignore  Cargo.toml  README.md
src/: aes_cbc.rs  aes_ecb.rs  argon2.rs  bcrypt.rs  error.rs  lib.rs  md5.rs  sha2.rs
