[package]
name = "rs-crypto"
version = "0.1.0"
edition = "2021"
authors = ["miiy <miiy@users.noreply.github.com>"]
description = "A Rust library for cryptographic functions"
repository = "https://github.com/miiy/rs-crypto"
license = "MIT"

[dependencies]
derive_more = { version = "1.0.0", features = ["full"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
bcrypt = "0.15.1"
argon2 = { version = "0.5.3", features = ["std"] }
aes = "0.8.4"
cbc = "0.1.2"
ecb = "0.1.2"
md-5 = "0.10.6"
sha2 = "0.10.8"
hex = "0.4.3"